--- a/demo/css/index.css
+++ b/demo/css/index.css
@@ -107,7 +107,7 @@ footer .contacticons li a {
   color: inherit;
 }
 footer .contacticons li a:hover, footer .contacticons li a:focus {
-  color: #4696E5;
+  color: coral;
 }
 footer p {
   margin: 0;
